--- a/style.scss
+++ b/style.scss
@@ -12,7 +12,12 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
-  @include animation($name: kf-img-animation, $duration: 3s);
+  opacity: 0;
+
+  &.inview {
+
+    @include animation($name: kf-img-animation, $duration: 3s);
+  }
 
   filter: blur(5px);
 
@@ -30,7 +35,7 @@
 @keyframes kf-img-animation {
   0% {
     opacity: 0;
-    filter: blur(5px);
+    filter: blur(10px);
   }
   100% {
     opacity: 1;
@@ -45,6 +50,7 @@
   transform: translate(-50%, -50%);
   font-size: 2em;
   color: white;
+  opacity: 0;
 
   &.inview {
     opacity: 1;
@@ -113,5 +119,30 @@
   100% {
     opacity: 1;
     transform: scale(100%);
+  }
+}
+
+.btn {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+
+  border: 0.2rem outset pink;
+  outline: 0.1rem solid khaki;
+  border-radius: 50px;
+  font: 1rem sans-serif;
+  margin: 2rem;
+  padding: 1em 3em;
+  background-color: rgba(243, 234, 234, 0.5);
+  box-shadow: 5px 5px 0 0 rgb(47, 49, 50);
+  cursor: pointer;
+  
+  &:hover {
+    background-color: rgb(254, 221, 226, 0.5);
+    color: white;
+    box-shadow: none;
+    // transform: translate(1px);
   }
 }
