--- a/dep/style.scss
+++ b/dep/style.scss
@@ -4,10 +4,66 @@
   position: relative;
   height: 100vh;
   background-color: transparent;
+
+  &:nth-child(2) {
+    background-color: rgba(209, 237, 209, 0.3);
+  }
+
+  &:nth-child(3) {
+    background-color: rgb(244, 211, 211, 0.3);
+  }
 }
 
 .bg-img {
-  background-image: url("../images/AdobeStock_178658489.jpeg");
+  background-image: url("images/AdobeStock_178658489.jpeg");
+  background-color: transparent;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+
+  &.inview {
+    @include animation($name: kf-img-animation, $duration: 3s);
+  }
+
+  filter: blur(5px);
+
+  &::before {
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    background-color: rgba(20, 18, 20, 0.214);
+  }
+}
+.bg-img1 {
+  background-image: url("images/AdobeStock_277046896_Preview.jpeg");
+  background-color: transparent;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+
+  &.inview {
+    @include animation($name: kf-img-animation, $duration: 3s);
+  }
+
+  filter: blur(5px);
+
+  &::before {
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    background-color: rgba(20, 18, 20, 0.214);
+  }
+}
+.bg-img2 {
+  background-image: url("images/AdobeStock_181782900-1.jpeg");
   background-color: transparent;
   height: 100vh;
   background-size: cover;
@@ -58,6 +114,9 @@
     & .char {
       display: inline-block;
     }
+  }
+  & .char {
+    opacity: 0;
   }
 }
 
