--- a/dep/style.css
+++ b/dep/style.css
@@ -3,7 +3,7 @@
   height: 100vh;
   background-color: transparent;
   overflow: hidden;
-  margin-top: 500px;
+  margin-top: 700px;
 }
 #container:nth-child(2) {
   background-color: rgba(209, 237, 209, 0.3);
@@ -119,7 +119,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 2em;
-  color: white;
+  color: rgb(229, 173, 173);
   opacity: 0;
 }
 .animate-title.inview,
