--- a/dep/style.css
+++ b/dep/style.css
@@ -3,7 +3,8 @@
   height: 100vh;
   background-color: transparent;
   overflow: hidden;
-  margin-top: 700px;
+  margin-top: 1000px;
+  margin-bottom: 500px;
 }
 #container:nth-child(2) {
   background-color: rgba(209, 237, 209, 0.3);
@@ -93,6 +94,36 @@
   animation-play-state: running;
 }
 .bg-img2::before {
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  background-color: rgba(20, 18, 20, 0.214);
+}
+
+.bg-img3 {
+  background-image: url("images/AdobeStock_223264627_Preview.jpeg");
+  background-color: transparent;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  filter: blur(5px);
+}
+.bg-img3.inview {
+  animation-name: kf-img-animation;
+  animation-delay: 0s;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+.bg-img3::before {
   content: "";
   top: 0;
   left: 0;
