--- a/dep/style.css
+++ b/dep/style.css
@@ -3,8 +3,8 @@
   height: 100vh;
   background-color: transparent;
   overflow: hidden;
-  margin-top: 1000px;
-  margin-bottom: 500px;
+  margin-top: 200px;
+  margin-bottom: 200px;
 }
 #container:nth-child(2) {
   background-color: rgba(209, 237, 209, 0.3);
@@ -389,4 +389,136 @@
   font-size: 60px;
   line-height: 50px;
   color: #f3eeee;
+  margin: 300px;
+  margin-top: 100px;
+  padding: 70px 50px 70px 50px;
+}
+
+/*  copy scroll tutorial */
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+.cover-slide {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 80vh;
+}
+.cover-slide::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #eaebe6;
+  opacity: 0;
+}
+.cover-slide.inview::after {
+  opacity: 1;
+  animation-name: kf-cover-slide;
+  animation-delay: 0s;
+  animation-duration: 1.6s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes kf-cover-slide {
+  0% {
+    transform-origin: left;
+    transform: scaleX(0);
+  }
+  50% {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  50.1% {
+    transform-origin: right;
+    transform: scaleX(1);
+  }
+  100% {
+    transform-origin: right;
+    transform: scaleX(0);
+  }
+}
+.img-zoom, .bg-img-zoom {
+  opacity: 1;
+}
+.inview .img-zoom, .inview .bg-img-zoom {
+  opacity: 1;
+  transition: transform 0.3s ease;
+  animation-name: kf-img-show;
+  animation-delay: 0s;
+  animation-duration: 1.6s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  animation-play-state: running;
+}
+.inview .img-zoom:hover, .inview .bg-img-zoom:hover {
+  transform: scale(1.05);
+}
+
+@keyframes kf-img-show {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  50.1% {
+    opacity: 1;
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.hover-darken::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: background-color 0.3s ease;
+  pointer-events: none;
+  animation-name: kf-img-show;
+  animation-delay: 0s;
+  animation-duration: 1.6s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  animation-play-state: running;
+}
+.hover-darken:hover::before {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.bg-img-zoom {
+  background-image: url(images/AdobeStock_336729630_Preview.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+
+.img-bg50 {
+  position: relative;
+}
+.img-bg50::before {
+  display: block;
+  content: "";
+  padding-top: 50%;
 }/*# sourceMappingURL=style.css.map */
