--- a/dep/style.scss
+++ b/dep/style.scss
@@ -5,8 +5,8 @@
   height: 100vh;
   background-color: transparent;
   overflow: hidden;
-  margin-top: 1000px;
-  margin-bottom: 500px;
+  margin-top: 200px;
+  margin-bottom: 200px;
 
   &:nth-child(2) {
     background-color: rgba(209, 237, 209, 0.3);
@@ -170,34 +170,6 @@
     transform: translateY(0);
   }
 }
-// .gsap-animate-title {
-//   position: absolute;
-//   top: 60%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   font-size: 4em;
-//   color: rgb(241, 225, 236);
-//   opacity: 0;
-
-//   &.inview {
-//     opacity: 1;
-
-//     & .char {
-//       display: inline-block;
-
-//       @include animation(
-//         $name: kf-animation-chars2,
-//         $duration: 3s,
-//         $fill-mode: both
-//       );
-//       @for $i from 1 through 55 {
-//         &:nth-child(#{$i}) {
-//           animation-delay: $i * 0.03s;
-//         }
-//       }
-//     }
-//   }
-// }
 
 @keyframes kf-animation-chars2 {
   0% {
@@ -239,4 +211,156 @@
   font-size: 60px;
   line-height: 50px;
   color: #f3eeee;
+  margin: 300px;
+  margin-top: 100px;
+  padding: 70px 50px 70px 50px;
+}
+
+/*  copy scroll tutorial */
+
+
+
+img {
+  max-width: 100%;
+  vertical-align: bottom;
+}
+
+.cover-slide {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: 80vh;
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #eaebe6;
+    opacity: 0;
+  }
+  &.inview {
+    &::after {
+      opacity: 1;
+
+      @include animation(
+        $name: kf-cover-slide,
+        $duration: 1.6s,
+        $timing-function: ease-in-out
+      );
+    }
+  }
+}
+
+@keyframes kf-cover-slide {
+  0% {
+    transform-origin: left;
+    transform: scaleX(0);
+  }
+  50% {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  50.1% {
+    transform-origin: right;
+    transform: scaleX(1);
+  }
+  100% {
+    transform-origin: right;
+    transform: scaleX(0);
+  }
+}
+
+// @keyframes kf-cover-slide {
+//   0% {
+//     left: 0;
+//     right: 100%;
+//   }
+//   50% {
+//     left: 0;
+//     right: 0;
+//   }
+//   100% {
+//     left: 100%;
+//     right: 0;
+//   }
+// }
+
+.img-zoom {
+  opacity: 1;
+
+  .inview & {
+    opacity: 1;
+    transition: transform 0.3s ease;
+    @include animation(
+      $name: kf-img-show,
+      $duration: 1.6s,
+      $timing-function: ease-in-out,
+      $fill-mode: none
+    );
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+
+@keyframes kf-img-show {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  50.1% {
+    opacity: 1;
+    transform: scale(1.5);
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.hover-darken {
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: background-color 0.3s ease;
+    pointer-events: none;
+    @include animation(
+      $name: kf-img-show,
+      $duration: 1.6s,
+      $timing-function: ease-in-out,
+      $fill-mode: none
+    );
+  }
+  &:hover::before {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+}
+
+.bg-img-zoom {
+  background-image: url(images/AdobeStock_336729630_Preview.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  @extend .img-zoom;
+}
+
+.img-bg50 {
+  position: relative;
+  
+  &::before {
+    display: block;
+    content: '';
+    padding-top: 50%;
+  }
 }
