--- a/dep/style.css
+++ b/dep/style.css
@@ -1,3 +1,13 @@
+.index {
+  background-color: #151313;
+  font-size: 60px;
+  line-height: 50px;
+  color: #f3eeee;
+  margin: 300px;
+  margin-top: 100px;
+  padding: 70px 50px 70px 50px;
+}
+
 #container {
   position: relative;
   height: 100vh;
@@ -384,16 +394,6 @@
   box-shadow: none;
 }
 
-.index {
-  background-color: #151313;
-  font-size: 60px;
-  line-height: 50px;
-  color: #f3eeee;
-  margin: 300px;
-  margin-top: 100px;
-  padding: 70px 50px 70px 50px;
-}
-
 /*  copy scroll tutorial */
 /* scroll demo copy code */
 img {
@@ -514,4 +514,14 @@ img {
   background-position: center;
   background-size: cover;
   width: 100%;
+}
+
+.swiper {
+  width: 600px;
+  height: 300px;
+  margin: 0 auto;
+  overflow: hidden;
+  background-color: #eee;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }/*# sourceMappingURL=style.css.map */
