--- a/dep/style.scss
+++ b/dep/style.scss
@@ -374,12 +374,43 @@ img {
 //   }
 // }
 
-.swiper {
-  width: 600px;
-  height: 300px;
-  margin: 0 auto;
-  overflow: hidden;
-  background-color: #eee;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
+
+.swiper-slide {
+  width: 70%;
+  height: 70%;
+  text-align: center;
+  font-size: 18px;
+  position: relative;
+  //下に余白を作る
+  margin-bottom: 10rem;
+}
+
+.hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+
+  &__title {
+    //中央揃え
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+color: white;
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    margin-bottom: 1rem;
+  }
+}
+
+.img-zoom {
+  opacity: 1;
 }
