--- a/dep/style.css
+++ b/dep/style.css
@@ -516,13 +516,52 @@ img {
   width: 100%;
 }
 
+.swiper {
+  overflow: visible;
+  margin-bottom: 300px;
+}
+
 .swiper-slide {
-  width: 70%;
-  height: 70%;
+  height: 500px;
+  width: 100%;
   text-align: center;
   font-size: 18px;
   position: relative;
   margin-bottom: 10rem;
+  overflow: hidden;
+}
+.swiper-slide > img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: scale(0.8);
+  transition: transform 1.5s ease;
+}
+.swiper-slide::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(3, 38, 76, 0.2);
+}
+.swiper-slide:hover > img {
+  transform: scale(1.2);
+}
+.swiper-slide-active > img {
+  transform: scale(1);
+}
+.swiper-slide-active .hero__title {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+.swiper-slide-active-prev > img, .swiper-slide-active-next > img {
+  transform: scale(0.8);
 }
 
 .hero {
@@ -532,20 +571,25 @@ img {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 0.5s ease-in-out;
 }
 .hero__title {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% + 20px));
   color: white;
   font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   margin-bottom: 1rem;
+  z-index: 2;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out 1s, transform 0.5s ease-in-out 1s;
 }
 
 .img-zoom, .bg-img-zoom {
