--- a/dep/style.scss
+++ b/dep/style.scss
@@ -374,16 +374,63 @@ img {
 //   }
 // }
 
-
+.swiper {
+  overflow: visible;
+  margin-bottom: 300px;
+}
 
 .swiper-slide {
-  width: 70%;
-  height: 70%;
+  height: 500px;
+  width: 100%;
   text-align: center;
   font-size: 18px;
   position: relative;
   //下に余白を作る
   margin-bottom: 10rem;
+  overflow: hidden;
+
+  & > img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    transform: scale(0.8);
+    transition: transform 1.5s ease;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(3, 38, 76, 0.2);
+  }
+
+  &:hover {
+    & > img {
+      transform: scale(1.2);
+    }
+  }
+  &-active {
+    & > img {
+      transform: scale(1);
+    }
+  & .hero__title {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+
+  &-prev,
+  &-next {
+    & > img {
+      transform: scale(0.8);
+    }
+}
+}
 }
 
 .hero {
@@ -393,21 +440,29 @@ img {
   transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  //titleをアニメーションさせる
+  opacity: 0;
+  transform: translateY(100px);
+  transition: all 0.5s ease-in-out;
+
 
   &__title {
     //中央揃え
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-color: white;
+    transform: translate(-50%, calc(-50% + 20px));
+    color: white;
     font-size: 2rem;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
     margin-bottom: 1rem;
+    z-index: 2;
+    opacity: 0;
+    // transform: translateY(100px);
+    transition: opacity 0.5s ease-in-out 1s, transform 0.5s ease-in-out 1s;
   }
 }
 
